# TNNAddRK

examples/rknn_yolov5_demo/: CMakeLists.txt  build-android_RK3588.sh  build-linux_RK3588.sh
examples/rknn_yolov5_demo/include/: postprocess.h.bak1  preprocess.h
examples/rknn_yolov5_demo/install/: out.h264  test.h264
examples/rknn_yolov5_demo/install/rknn_yolov5_demo_Android/: rknn_yolov5_video_demo
examples/rknn_yolov5_demo/src/: main.cc  main_camera.cc  main_video.cc  main_video.cc.bak1  out.h264  postprocess.cc.bak1
examples/rknn_yolov5_demo/temp/: CMakeLists.txt  main.cc
examples/rknn_yolov5_demo/wrap/: CMakeLists.txt  build-android_RK3588.sh  com_zd_neliva_android_sdk_RK_YOLOV5_DET_SDK.cc  com_zd_neliva_android_sdk_RK_YOLOV5_DET_SDK.h  test.cc
examples/rknn_yolov5_demo/wrap/java/: com_zd_neliva_android_sdk_RK_YOLOV5_DET_SDK.h
examples/rknn_yolov5_demo/wrap/java/com/zd/neliva_android_sdk/: RK_YOLOV5_DET_SDK.java
src/: tnn_sdk_sample.cc  tnn_sdk_sample.h
